Update usecase follow new ldm

--- a/ba/[NDS-E-00016] Quản lý tổ chức hành nghề công chứng/1.function-breakdown.md
+++ b/ba/[NDS-E-00016] Quản lý tổ chức hành nghề công chứng/1.function-breakdown.md
@@ -16,27 +16,13 @@ markmap:
 - Xuất danh sách tổ chức hành nghề công chứng trên địa bàn Tỉnh/Thành phố
 - Xem lịch sử cập nhật thông tin tổ chức hành nghề công chứng trên địa bàn Tỉnh/Thành phố
 
-### 2. Quản lý chữ ký số của tổ chức
-- Xem danh sách thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Xem chi tiết thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Chỉnh sửa đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Xóa đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Gửi duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Từ chối phê duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Tìm kiếm đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Xuất danh sách thông tin chữ ký số của tổ chức hành nghề công chứng
-- Xem lịch sử đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-
-### 3. Tra cứu & báo cáo
+### 2. Tra cứu
 - Tra cứu thông tin tổ chức hành nghề công chứng trên địa bàn tỉnh/thành phố
 - Tra cứu thông tin tổ chức hành nghề công chứng trên phạm vi toàn quốc
-- Xem tổng hợp danh sách tổ chức hành nghề công chứng
 
 ---
 
 ## Lãnh đạo Sở Tư pháp / Lãnh đạo Phòng HCBTTP tại Sở TP
-### 1. Xem & tra cứu thông tin tổ chức
 - Xem danh sách tổ chức hành nghề công chứng trên địa bàn Tỉnh/Thành phố
 - Xem chi tiết tổ chức hành nghề công chứng trên địa bàn Tỉnh/Thành phố
 - Tìm kiếm thông tin tổ chức hành nghề công chứng trên địa bàn Tỉnh/Thành phố
@@ -44,67 +30,29 @@ markmap:
 - Xem lịch sử cập nhật thông tin tổ chức hành nghề công chứng trên địa bàn Tỉnh/Thành phố
 - Tra cứu thông tin tổ chức hành nghề công chứng trên phạm vi toàn quốc
 
-### 2. Quản lý chữ ký số
-- Xem danh sách thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Xem chi tiết đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Tìm kiếm đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Xuất danh sách thông tin chữ ký số của tổ chức hành nghề công chứng
-- Xem lịch sử đăng ký chữ ký số của tổ chức hành nghề công chứng
-
 ---
 
 ## Lãnh đạo Bộ Tư pháp / Lãnh đạo Cục BTTP / Chuyên viên Cục BTTP
-### 1. Xem & tra cứu thông tin tổ chức
+### 1. Xem thông tin tổ chức
 - Xem danh sách tổ chức hành nghề công chứng (xem theo tỉnh/thành)
 - Xem chi tiết tổ chức hành nghề công chứng
 - Tìm kiếm tổ chức hành nghề công chứng
 - Xuất danh sách tổ chức hành nghề công chứng
 - Xem lịch sử cập nhật thông tin tổ chức hành nghề công chứng
 
-### 2. Quản lý chữ ký số
-- Xem danh sách đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Xem chi tiết đăng ký chữ ký số
-- Tìm kiếm đăng ký chữ ký số
-- Xuất danh sách đăng ký chữ ký số
-- Xem lịch sử đăng ký chữ ký số
+### 2. Tra cứu
+- Tra cứu thông tin tổ chức hành nghề công chứng trên địa bàn tỉnh/thành phố
+- Tra cứu thông tin tổ chức hành nghề công chứng trên phạm vi toàn quốc
 
-### 3. Tra cứu & báo cáo
-- Tra cứu TCHNCC trên phạm vi toàn quốc
-- Xem tổng hợp danh sách tổ chức hành nghề công chứng
 ---
 
 ## Công chứng viên tại các TCHNCC
-### 1. Chữ ký số & tra cứu
-- Xem danh sách thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Xem chi tiết đăng ký chữ ký số
-- Đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
-- Chỉnh sửa đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Xóa đăng ký chữ ký số của tổ chức hành nghề công chứng
-- Gửi duyệt đăng ký chữ ký số
-- Tìm kiếm đăng ký chữ ký số
-- Xuất danh sách đăng ký chữ ký số
-- Xem lịch sử đăng ký chữ ký số
-
-### 2. Tra cứu
 - Tra cứu thông tin tổ chức hành nghề công chứng trên phạm vi toàn quốc
 - Tra cứu thông tin tổ chức hành nghề công chứng theo tỉnh/thành phố
 
 ---
 
 ## Nhân viên tại TCHNCC
-### 1. Quản lý đăng ký chữ ký số (thực hiện trực tiếp)
-- Xem danh sách đăng ký chữ ký số
-- Xem chi tiết đăng ký chữ ký số
-- Tạo đăng ký chữ ký số
-- Sửa đăng ký chữ ký số
-- Xóa đăng ký chữ ký số
-- Gửi duyệt đăng ký chữ ký số
-- Tìm kiếm đăng ký chữ ký số
-- Xuất danh sách đăng ký chữ ký số
-- Xem lịch sử đăng ký chữ ký số
-
-### 2. Tra cứu
 - Tra cứu thông tin tổ chức hành nghề công chứng theo tỉnh/thành phố
 - Tra cứu thông tin tổ chức hành nghề công chứng trên phạm vi toàn quốc
 
