--- a/ba/[NDS-E-00056] Quản lý chữ ký số/1.function-breakdown.md
+++ b/ba/[NDS-E-00056] Quản lý chữ ký số/1.function-breakdown.md
@@ -5,6 +5,7 @@ markmap:
 ---
 # Quản lý công chứng viên
 ## Chuyên viên STP
+### 1. Chữ ký số Công chứng viên
 - Xem danh sách đăng ký thông tin chữ ký số của công chứng viên
 - Xem chi tiết thông tin đăng ký chữ ký số của công chứng viên
 - Tìm kiếm thông tin đăng ký chữ ký số của công chứng viên
@@ -12,20 +13,47 @@ markmap:
 - Từ chối phê duyệt đăng ký thông tin chữ ký số của công chứng viên
 - Xem lịch sử đăng ký thông tin chữ ký số của công chứng viên
 
+### 2. Chữ ký số của tổ chức công chứng
+- Xem danh sách thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Xem chi tiết thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Từ chối phê duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Tìm kiếm đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Xem lịch sử đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+
 ## Lãnh đạo Sở Tư pháp, Lãnh đạo Phòng HCBTTP tại Sở Tư pháp
+### 1. Chữ ký số công chứng viên
 - Xem danh sách đăng ký thông tin chữ ký số của công chứng viên
 - Xem chi tiết thông tin đăng ký chữ ký số của công chứng viên
-- Tìm kiếm thông tin đăng ký chữ ký số
-- Duyệt đăng ký chữ ký số
-- Xem lịch sử đăng ký chữ ký số
+- Tìm kiếm thông tin đăng ký chữ ký số của công chứng viên
+- Duyệt đăng ký thông tin chữ ký số của công chứng viên
+- Từ chối phê duyệt đăng ký thông tin chữ ký số của công chứng viên
+- Xem lịch sử đăng ký thông tin chữ ký số của công chứng viên
+
+### 2. Chữ ký số tổ chức công chứng
+- Xem danh sách thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Xem chi tiết thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Từ chối phê duyệt đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Tìm kiếm đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Xem lịch sử đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
 
 ## Lãnh đạo Bộ Tư pháp, Lãnh đạo Cục Bổ trợ Tư pháp, Chuyên viên Cục Bổ trợ Tư pháp
+### 1. Chữ ký số công chứng viên
 - Xem danh sách đăng ký thông tin chữ ký số của công chứng viên
 - Xem chi tiết thông tin đăng ký chữ ký số của công chứng viên
 - Tìm kiếm thông tin đăng ký chữ ký số
 - Xem lịch sử đăng ký chữ ký số
-  
-## Công chứng viên tại các TCHNCC
+
+### 2. Chữ ký số tổ chức công chứng
+- Xem danh sách đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Xem chi tiết đăng ký chữ ký số
+- Tìm kiếm đăng ký chữ ký số
+- Xuất danh sách đăng ký chữ ký số
+- Xem lịch sử đăng ký chữ ký số
+
+## Công chứng viên/Nhân viên tại các TCHNCC
+### 1. Chữ ký số công chứng viên
 - Xem danh sách đăng ký thông tin chữ ký số của công chứng viên
 - Xem chi tiết thông tin đăng ký chữ ký số của công chứng viên
 - Tìm kiếm thông tin đăng ký chữ ký số của công chứng viên
@@ -35,15 +63,15 @@ markmap:
 - Gửi duyệt đăng ký thông tin chữ ký số của công chứng viên
 - Xem lịch sử đăng ký thông tin chữ ký số của công chứng viên
 
-## Nhân viên tại các TCHNCC
-- Xem danh sách đăng ký thông tin chữ ký số của công chứng viên
-- Xem chi tiết thông tin đăng ký chữ ký số của công chứng viên
-- Tìm kiếm thông tin đăng ký chữ ký số của công chứng viên
-- Đăng ký thông tin chữ ký số của công chứng viên
-- Sửa đăng ký thông tin chữ ký số của công chứng viên
-- Xóa đăng ký thông tin chữ ký số của công chứng viên
-- Gửi duyệt đăng ký thông tin chữ ký số của công chứng viên
-
+### 2. Chữ ký số tổ chức công chứng
+- Xem danh sách thông tin đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Xem chi tiết đăng ký chữ ký số
+- Đăng ký thông tin chữ ký số của tổ chức hành nghề công chứng
+- Chỉnh sửa đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Xóa đăng ký chữ ký số của tổ chức hành nghề công chứng
+- Gửi duyệt đăng ký chữ ký số
+- Tìm kiếm đăng ký chữ ký số
+- Xem lịch sử đăng ký chữ ký số
 
 
 
